--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             departureListings.push(
               <DepartureListing
               name={this.props.data[departureSet].destination_name}
+              length={this.props.data[departureSet].destination_name}
               arriving_in={this.props.data[departureSet].estimates.minutes}/>
               );
           };
@@ -60,7 +61,8 @@
           return (
             <div className="departureListing">
               <h3>Departure</h3>
-              Desination: {this.props.name}<br />
+              Destination: {this.props.name}<br />
+              Length: {this.props.length}<br />
               Arriving: {this.props.arriving_in}
             </div>
           );
