--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         getInitialState: function() {
           return {data: []};
         },
-        handleSubmit: function(station) {
-        console.log(station);
+        handleSubmit: function(stationObject) {
           $.ajax({
-            url: this.props.url + station.station,
+            url: this.props.url + stationObject.station1,
             dataType: 'json',
             success: function(data) {
               this.setState({data: data});
             }.bind(this),
             error: function(xhr, status, err) {
               console.error(this.props.url, status, error.toString());
-              }.bind(this)
+            }.bind(this)
           });
         },
         render: function() {
@@ -75,13 +74,15 @@
       var StationSelectForm = React.createClass({
         handleSubmit: function(e) {
           e.preventDefault();
-          var station = this.refs.station.getDOMNode().value.trim();
-          this.props.onSubmit({station: station});
+          var station1 = this.refs.station1.getDOMNode().value.trim();
+          var station2 = this.refs.station2.getDOMNode().value.trim();
+          this.props.onSubmit({station1: station1, station2: station2});
         },
         render: function() {
           return (
             <form className="stationSelectForm" onSubmit={this.handleSubmit} >
-              <select ref="station">
+              <label htmlFor="station1">Departure</label>
+              <select ref="station1">
                 <option value='12th'>12th St. Oakland City Center</option>
                 <option value='16th'>16th St. Mission (SF)</option>
                 <option value='19th'>19th St. Oakland</option>
@@ -125,6 +126,53 @@
                 <option value='ucty'>Union City</option>
                 <option value='wcrk'>Walnut Creek</option>
                 <option value='woak'>West Oakland</option>  
+              </select><br />
+              <label htmlFor="station2">Destination</label>
+              <select ref="station2">
+                <option disabled selected></option>
+                <option value='12th'>12th St. Oakland City Center</option>
+                <option value='16th'>16th St. Mission (SF)</option>
+                <option value='19th'>19th St. Oakland</option>
+                <option value='24th'>24th St. Mission (SF)</option>
+                <option value='ashb'>Ashby (Berkeley)</option>
+                <option value='balb'>Balboa Park (SF)</option>
+                <option value='bayf'>Bay Fair (San Leandro)</option>
+                <option value='cast'>Castro Valley</option>
+                <option value='civc'>Civic Center (SF)</option>
+                <option value='cols'>Coliseum/Oakland Airport</option>
+                <option value='colm'>Colma</option>
+                <option value='conc'>Concord</option>
+                <option value='daly'>Daly City</option>
+                <option value='dbrk'>Downtown Berkeley</option>
+                <option value='dubl'>Dublin/Pleasanton</option>
+                <option value='deln'>El Cerrito del Norte</option>
+                <option value='plza'>El Cerrito Plaza</option>
+                <option value='embr'>Embarcadero (SF)</option>
+                <option value='frmt'>Fremont</option>
+                <option value='ftvl'>Fruitvale (Oakland)</option>
+                <option value='glen'>Glen Park (SF)</option>
+                <option value='hayw'>Hayward</option>
+                <option value='lafy'>Lafayette</option>
+                <option value='lake'>Lake Merritt (Oakland)</option>
+                <option value='mcar'>MacArthur (Oakland)</option>
+                <option value='mlbr'>Millbrae</option>
+                <option value='mont'>Montgomery St. (SF)</option>
+                <option value='nbrk'>North Berkeley</option>
+                <option value='ncon'>North Concord/Martinez</option>
+                <option value='orin'>Orinda</option>
+                <option value='pitt'>Pittsburg/Bay Point</option>
+                <option value='phil'>Pleasant Hill</option>
+                <option value='powl'>Powell St. (SF)</option>
+                <option value='rich'>Richmond</option>
+                <option value='rock'>Rockridge (Oakland)</option>
+                <option value='sbrn'>San Bruno</option>
+                <option value='sfia'>San Francisco Int'l Airport</option>
+                <option value='sanl'>San Leandro</option>
+                <option value='shay'>South Hayward</option>
+                <option value='ssan'>South San Francisco</option>
+                <option value='ucty'>Union City</option>
+                <option value='wcrk'>Walnut Creek</option>
+                <option value='woak'>West Oakland</option>
               </select>
               <input type="submit" value="Find Trains" />
             </form>
